src/main/java/com/example/fas/exceptions/user/invalid/PasswordInvalidException.java
package com.example.fas.exceptions.user.invalid;

public class PasswordInvalidException extends RuntimeException {
    public PasswordInvalidException(String message) {
        super(message);
    }
}
